Fixed the footer anchor element font sizes to be smaller on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,5 +235,9 @@ footer li:hover{
     h4{
         font-size: 10px;
     }
+    
+    footer ul li a{
+        font-size: 12px;
+    }
 
 }
